force-app/main/default/objects/Account_Reassignment__c/Account_Reassignment__c.object-meta.xml
<CustomObject>
    <description>Account Reassignments are determined by a set of criteria run by the data analytics team and then loaded quarterly.  Evaluation Criteria and ShipTo Assignments are loaded as child objects.</description>
    <label>Account Reassignment</label>
    <nameField>
        <label>Account Reassignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Reassignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>