force-app/main/default/objects/Account_Reassignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which account is this for?</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Reassignments</relationshipLabel>
    <relationshipName>Account_Reassignments</relationshipName>
    <type>Lookup</type>
</CustomField>