force-app/main/default/objects/Account_Reassignment__c/fields/Account_and_proposed_new_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_and_proposed_new_Owner__c</fullName>
    <formula>Account__r.Account_SysDivBillTo__c &amp;  Proposed_New_Owner_Primary_Sales_Rep__r.Network_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account and proposed new Owner</label>
    <type>Text</type>
</CustomField>