force-app/main/default/objects/Account_Reassignment__c/fields/Account_Owner_Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Primary_Sales_Rep__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Current owner of the Ship To(s) that are flagged for reassignment</inlineHelpText>
    <label>Account Owner - Primary Sales Rep</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Account Reassignments Outgoing</relationshipLabel>
    <relationshipName>Account_Reassignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>