force-app/main/default/objects/Account_Reassignment__c/fields/Date_Review_Period_Ends__c.field-meta.xml
<CustomField>
    <fullName>Date_Review_Period_Ends__c</fullName>
    <description>Date the review Period Ends, used for reporting on ones that are soon or overdue.  updated via workflow</description>
    <label>Date Review Period Ends</label>
    <type>Date</type>
</CustomField>