force-app/main/default/objects/Account_Reassignment__c/fields/Email_PSR_GM__c.field-meta.xml
<CustomField>
    <fullName>Email_PSR_GM__c</fullName>
    <defaultValue>$User.GSM_Email__c</defaultValue>
    <label>Email - PSR GM</label>
    <type>Email</type>
</CustomField>