force-app/main/default/objects/Account_Reassignment__c/fields/Email_PSR_RVP__c.field-meta.xml
<CustomField>
    <fullName>Email_PSR_RVP__c</fullName>
    <defaultValue>$User.Vice_President_Email__c</defaultValue>
    <label>Email - PSR RVP</label>
    <type>Email</type>
</CustomField>