force-app/main/default/objects/Account_Reassignment__c/fields/Email_PSR_SM__c.field-meta.xml
<CustomField>
    <fullName>Email_PSR_SM__c</fullName>
    <defaultValue>$User.ZM_SM_Email__c</defaultValue>
    <label>Email - PSR SM</label>
    <type>Email</type>
</CustomField>