force-app/main/default/objects/Account_Reassignment__c/fields/No_Reassignment_Needed_Explanation__c.field-meta.xml
<CustomField>
    <fullName>No_Reassignment_Needed_Explanation__c</fullName>
    <description>Required text field if Account Reassignment Status field reflects &quot;No Reassignment Needed&quot;</description>
    <label>No Reassignment Needed Explanation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>