force-app/main/default/objects/Account_Reassignment__c/fields/Notes_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Notes_Last_Modified_By__c</fullName>
    <description>Person who last modified the Reassignment Notes field.</description>
    <inlineHelpText>Person who last modified the Reassignment Notes field.</inlineHelpText>
    <label>Notes - Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>