force-app/main/default/objects/Account_Reassignment__c/fields/Notes_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Notes_Last_Modified_Date__c</fullName>
    <description>Date the Reassignment Notes were last modified</description>
    <inlineHelpText>Date the Reassignment Notes were last modified</inlineHelpText>
    <label>Notes - Last Modified Date</label>
    <type>Date</type>
</CustomField>