force-app/main/default/objects/Account_Reassignment__c/fields/Number_of_ShipTos__c.field-meta.xml
<CustomField>
    <fullName>Number_of_ShipTos__c</fullName>
    <label>Number of ShipTos</label>
    <summaryForeignKey>Ship_To_Reassignments__c.Account_Reassignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>