force-app/main/default/objects/Account_Reassignment__c/fields/Proposed_New_Owner_Primary_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Proposed_New_Owner_Primary_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If New Rep - enter the new Sales Rep&apos;s name
If House - enter the SM name (you)
If Inside Sales - qualify account with Inside Sales manager, enter the Inside Sales Rep&apos;s name</inlineHelpText>
    <label>Proposed New Owner</label>
    <referenceTo>Primary_Sales_Rep__c</referenceTo>
    <relationshipLabel>Account Reassignments Incoming</relationshipLabel>
    <relationshipName>Account_Reassignments_New_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>