force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_Curr_Rep_90_Day_Observe__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_Curr_Rep_90_Day_Observe__c</fullName>
    <description>Date the Reassignment Status field reflects &quot;Current Rep - 90 Day Observation&quot;</description>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;Current Rep - 90 Day Observation&quot;</inlineHelpText>
    <label>Reassign Date - Curr Rep 90 Day Observe</label>
    <type>Date</type>
</CustomField>