force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_In_180_Day_Review__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_In_180_Day_Review__c</fullName>
    <description>Date the Reassignment Status field reflects &quot;New Rep - In 180-Day Review&quot;</description>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;New Rep - In 180-Day Review&quot;</inlineHelpText>
    <label>Reassign Date - In 180-Day Review</label>
    <type>Date</type>
</CustomField>