force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_Inside_Sales_House__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_Inside_Sales_House__c</fullName>
    <description>Date the Reassignment Status field reflects &quot;Reassigned - Inside Sales/House&quot;</description>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;Reassigned - Inside Sales/House&quot;</inlineHelpText>
    <label>Reassign Date - Inside Sales/House</label>
    <type>Date</type>
</CustomField>