force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_No_Reassignment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_No_Reassignment_Needed__c</fullName>
    <description>Date the Reassignment Status field reflects &quot;No Reassignment Needed&quot;</description>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;No Reassignment Needed&quot;</inlineHelpText>
    <label>Reassign Date - No Reassignment Needed</label>
    <type>Date</type>
</CustomField>