force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_Ob_Complete_Stay_w_Rep__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_Ob_Complete_Stay_w_Rep__c</fullName>
    <description>Date the Reassignment Status field reflects &quot;Observation Complete - Stay with Rep&quot;</description>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;Observation Complete - Stay with Rep&quot;</inlineHelpText>
    <label>Reassign Date - Ob Complete - Stay w Rep</label>
    <type>Date</type>
</CustomField>