force-app/main/default/objects/Account_Reassignment__c/fields/Reassign_Date_Reassignment_Pending__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Date_Reassignment_Pending__c</fullName>
    <inlineHelpText>Date the Reassignment Status field reflects &quot;Reassignment Pending&quot;</inlineHelpText>
    <label>Reassign Date - Reassignment Pending</label>
    <type>Date</type>
</CustomField>