force-app/main/default/objects/Account_Reassignment__c/fields/Reassignment_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Closed_Date__c</fullName>
    <label>Reassignment Closed Date</label>
    <type>Date</type>
</CustomField>