force-app/main/default/objects/Account_Reassignment__c/fields/Reassignment_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Effective_Date__c</fullName>
    <description>Allows the manager to enter a date for the Reassignment to take place.  Should be left blank if they want it to be effective immediately.  This does not change the closed date or any other date.  We&apos;ll consider it closed because SM has actioned it.</description>
    <inlineHelpText>If you want the reassignment to occur later, enter date here.  Leave it blank to be effective immediately</inlineHelpText>
    <label>Reassignment Effective Date</label>
    <type>Date</type>
</CustomField>