force-app/main/default/objects/Account_Reassignment__c/fields/Reassignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Notes__c</fullName>
    <inlineHelpText>Enter any notes</inlineHelpText>
    <label>Reassignment Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>