force-app/main/default/objects/Account_Reassignment__c/fields/Reassignment_Stage__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Stage__c</fullName>
    <inlineHelpText>Where the account is in the reassignment process</inlineHelpText>
    <label>Reassignment Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flagged for Reassignment</fullName>
            </value>
            <value>
                <fullName>Current Rep - 90 Day Observation</fullName>
            </value>
            <value>
                <fullName>Reassignment Pending</fullName>
            </value>
            <value>
                <fullName>New Rep - In 180-Day Review</fullName>
            </value>
            <value>
                <fullName>Reassigned - House</fullName>
            </value>
            <value>
                <fullName>Reassigned - Inside Sales</fullName>
            </value>
            <value>
                <fullName>No Reassignment Needed</fullName>
            </value>
            <value>
                <fullName>Observation Complete - Stay with Rep</fullName>
            </value>
            <value>
                <fullName>Reassigned - House / Inside Sales</fullName>
                <isActive>false</isActive>
                <label>Reassigned - House / Inside Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>