force-app/main/default/objects/Account_Reassignment__c/fields/Reassignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Reassignment_Status__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Reassignment_Stage__c, &quot;Observation Complete - Stay with Rep&quot;),
ISPICKVAL(Reassignment_Stage__c, &quot;No Reassignment Needed&quot;),
ISPICKVAL(Reassignment_Stage__c, &quot;Reassigned - House&quot;),
ISPICKVAL(Reassignment_Stage__c, &quot;Reassigned - Inside Sales&quot;),
ISPICKVAL(Reassignment_Stage__c, &quot;Reassigned - House / Inside Sales&quot;)
),
&quot;Closed&quot;,
&quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reassignment Status</label>
    <type>Text</type>
</CustomField>