force-app/main/default/objects/Account_Reassignment__c/fields/Sent_to_Optymyze__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Optymyze__c</fullName>
    <label>Sent to Optymyze</label>
    <type>DateTime</type>
</CustomField>