force-app/main/default/objects/Account_Reassignment__c/fields/Temp_Field__c.field-meta.xml
<CustomField>
    <fullName>Temp_Field__c</fullName>
    <description>Update this field with any data, in order to get the calculated fields to recalculate</description>
    <label>Temp Field</label>
    <length>15</length>
    <type>Text</type>
</CustomField>