force-app/main/default/objects/Account_Reassignment__c/validationRules/Proposed_Owner_error_if_in_wrong_stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Proposed_Owner_error_if_in_wrong_stage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(
OR( 
ISPICKVAL(Reassignment_Stage__c , &quot;New Rep - In 180-Day Review&quot;) ,
ISPICKVAL(Reassignment_Stage__c , &quot;Reassigned - House&quot;),
ISPICKVAL(Reassignment_Stage__c , &quot;Reassigned - Inside Sales&quot;),
ISPICKVAL(Reassignment_Stage__c , &quot;Observation Complete - Stay with Rep&quot;)
) 
),
NOT(ISBLANK( Proposed_New_Owner_Primary_Sales_Rep__c ) ))</errorConditionFormula>
    <errorDisplayField>Proposed_New_Owner_Primary_Sales_Rep__c</errorDisplayField>
    <errorMessage>Please enter a stage of  New Rep - In 180-Day Review, Reassigned - House or Reassigned - Inside Sales, before choosing the Proposed New Owner.</errorMessage>
</ValidationRule>