force-app/main/default/objects/Account_Reassignment__c/validationRules/Reassign_Must_choose_new_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Reassign_Must_choose_new_owner</fullName>
    <active>true</active>
    <description>If account reassignment status field reflects &quot;In 180-Day Review&quot;, user must choose a person to reassign account to.</description>
    <errorConditionFormula>AND(ispickval( Reassignment_Stage__c  ,&quot;New Rep - In 180-Day Review&quot;),
isblank( Proposed_New_Owner_Primary_Sales_Rep__c))</errorConditionFormula>
    <errorDisplayField>Proposed_New_Owner_Primary_Sales_Rep__c</errorDisplayField>
    <errorMessage>The Account Reassignment Status shows you have chosen to reassign this account. You must identify the new owner in the Proposed New Owner field.</errorMessage>
</ValidationRule>