force-app/main/default/objects/Account_Reassignment__c/validationRules/Reassign_No_Reassign_Needed_Explanation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reassign_No_Reassign_Needed_Explanation</fullName>
    <active>true</active>
    <description>If Account Reassignment Status reflects &quot;No Reassignment Needed&quot; the user must explain the reason in the &quot;No Reassignment Needed Explanation&quot; field.</description>
    <errorConditionFormula>AND(ispickval( Reassignment_Stage__c ,&quot;No Reassignment Needed&quot;),isblank(  No_Reassignment_Needed_Explanation__c ))</errorConditionFormula>
    <errorDisplayField>No_Reassignment_Needed_Explanation__c</errorDisplayField>
    <errorMessage>The Account Reassignment Stage field shows you have chosen to to keep the Account with the current owner. You must fill out the No Reassignment Needed Explanation field.</errorMessage>
</ValidationRule>