force-app/main/default/objects/Account_Reassignment__c/validationRules/Validate_Observation_Complete_Satge.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Observation_Complete_Satge</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND
         (
		 ISPICKVAL(Reassignment_Stage__c,
                    &quot;Observation Complete - Stay with Rep&quot;),
         ISBLANK( Reassign_Date_Curr_Rep_90_Day_Observe__c)  &amp;&amp; ISBLANK(Reassign_Date_In_180_Day_Review__c )
         
         ) 
	 
      , true, false)</errorConditionFormula>
    <errorMessage>Reassignment Stage &quot;Observation Complete - Stay with Rep&quot;  is not valid option if the prior Reassignment Stage selected was not   &quot;New Rep - In 180-Day Review&quot; or &quot;Current Rep - 90 Day Observation&quot;</errorMessage>
</ValidationRule>