force-app/main/default/objects/Account_Reassignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner_Primary_Sales_Rep__c</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>Reassignment_Stage__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Reassignment_Notes__c</columns>
    <columns>Reassignment_Status__c</columns>
    <columns>No_Reassignment_Needed_Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>