force-app/main/default/objects/Account_Reassignment__c/listViews/All_Open_Acct_Reassignments.listView-meta.xml
<ListView>
    <fullName>All_Open_Acct_Reassignments</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner_Primary_Sales_Rep__c</columns>
    <columns>Email_PSR_SM__c</columns>
    <columns>Reassignment_Stage__c</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>No_Reassignment_Needed_Explanation__c</columns>
    <columns>Reassignment_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reassignment_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Open Acct Reassignments</label>
</ListView>