force-app/main/default/objects/Account_Reassignment__c/listViews/Closed_Statuses.listView-meta.xml
<ListView>
    <fullName>Closed_Statuses</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Owner_Primary_Sales_Rep__c</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>Reassignment_Notes__c</columns>
    <columns>Reassignment_Stage__c</columns>
    <columns>No_Reassignment_Needed_Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reassignment_Stage__c</field>
        <operation>equals</operation>
        <value>Reassigned - House,Reassigned - Inside Sales,No Reassignment Needed</value>
    </filters>
    <filters>
        <field>Reassignment_Stage__c</field>
        <operation>equals</operation>
        <value>Observation Complete - Stay with Rep</value>
    </filters>
    <label>Closed Statuses</label>
    <language>en_US</language>
</ListView>