force-app/main/default/objects/Account_Reassignment__c/listViews/Current_Rep_90_Day_Observation.listView-meta.xml
<ListView>
    <fullName>Current_Rep_90_Day_Observation</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Owner_Primary_Sales_Rep__c</columns>
    <columns>Date_Review_Period_Ends__c</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>Reassignment_Notes__c</columns>
    <columns>Reassignment_Stage__c</columns>
    <columns>No_Reassignment_Needed_Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reassignment_Stage__c</field>
        <operation>equals</operation>
        <value>Current Rep - 90 Day Observation</value>
    </filters>
    <filters>
        <field>Reassignment_Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Current Rep 90 Day Observation</label>
    <language>en_US</language>
</ListView>