force-app/main/default/objects/Account_Reassignment__c/listViews/Inside_Sales_Reassignments_Lead.listView-meta.xml
<ListView>
    <fullName>Inside_Sales_Reassignments_Lead</fullName>
    <columns>NAME</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Inside Sales Reassignments Lead</label>
</ListView>