force-app/main/default/objects/Account_Reassignment__c/listViews/New_Rep_in_180_Day_Review.listView-meta.xml
<ListView>
    <fullName>New_Rep_in_180_Day_Review</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Owner_Primary_Sales_Rep__c</columns>
    <columns>Proposed_New_Owner_Primary_Sales_Rep__c</columns>
    <columns>Date_Review_Period_Ends__c</columns>
    <columns>Reassignment_Notes__c</columns>
    <columns>Reassignment_Stage__c</columns>
    <columns>No_Reassignment_Needed_Explanation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reassignment_Stage__c</field>
        <operation>equals</operation>
        <value>New Rep - In 180-Day Review</value>
    </filters>
    <label>New Rep in 180 Day Review</label>
    <language>en_US</language>
</ListView>